--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email:
-  facebook:"https://facebook.com/francisdontito"
+  facebook:
   flickr:
   github:https://github.com/dontito94
   instagram:https://instagram.com/titofrancis
