--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ footer-links:
   email:
   facebook:
   flickr:
-  github:https://github.com/dontito94
-  instagram:https://instagram.com/titofrancis
-  linkedin:https://www.linkedin.com/in/francis-tito-605365132/
+  github:https:
+  instagram:https:
+  linkedin:https:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter:https://twitter.com/francistito2
-  stackoverflow:https://stackexchange.com/users/9644980/f-tito
+  twitter:https:
+  stackoverflow:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
