--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6SpE6UWq1eRfdjRuA
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:benitoite@gmail.com
   facebook:
   flickr:
   github: barryclark/jekyll-now
