--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: BlessedKonoTz
 
 # Short bio or description (displayed in the header)
-description: Software developers | photographer
+description: Software developers 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "blessedkono.me"
 
 #
 # !! You don't need to change any of the configuration flags below !!
